# gatheround

./: .gitignore  .python-version  App.js  README.md  app.json  docker-compose.yml  index.js  package-lock.json  package.json
app/CommonStyles/: index.js
app/context/: AuthContext.js  AxiosContext.js
app/navigation/: index.js  navigation.js
app/screens/ConfirmEmailScreen/: ConfirmEmailScreen.js
app/screens/ForgotPasswordScreen/: ForgotPasswordScreen.js
app/screens/HomeScreen/: HomeScreen.js  index.js
app/screens/NewPasswordScreen/: NewPasswordScreen.js
app/screens/SignInScreen/: SignInScreen.js
app/screens/SignUpScreen/: SignUpScreen.js
app/screens/components/BottomNavi/: BottomNavi.js  index.js
app/screens/components/CustomButton/: CustomButton.js
app/screens/components/CustomInput/: CustomInput.js
app/screens/components/EventButton/: EventButton.js  index.js
app/screens/components/PackageButton/: PackageButton.js  index.js
app/screens/components/PackageCard/: PackageCard.js  index.js
app/screens/components/SectionTitle/: SectionTitle.js
app/screens/components/SocialSignInButtons/: SocialSignInButtons.js
app/screens/loginScreens/: LoginContainer.js
app/screens/loginScreens/ConfirmEmailScreen/: ConfirmEmailScreen.js
app/screens/loginScreens/SignInScreen/: SignInScreen.js
app/screens/mainScreens/: BusinessContainer.js  BusinessNavigator.js  HostNavigator.js  MainContainer.js
app/utils/: category-icons.js  datetime-utils.js  input-validation.js  user-utils.js
backend/: .env  pyproject.toml  server.py
backend/Resources/: Event.py
(+35 files in other folders)
